[package]
name = "pols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.5"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
regex = "1.8.1"
tokio = {version="1.28.0", features=["full"]}
tower-lsp = "0.19.0"
tree-sitter = "0.20.10"
tree-sitter-poweron = "1.0.0"
